# MCP-QlikView

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-THIRD-PARTY  LIMITATIONS.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  probe_finding.md
.github/workflows/: ci.yml
docs/: DEV_SETUP.md
docs/probes/: 2026-05-07-qvw-framing.md  2026-05-08-spanning-symbol-tables.md  2026-06-03-field-layout-investigation.md  2026-06-03-symbol-table-chunk-framing-resolved.md  2026-06-03-symbol-value-inventory.md
docs/research/: 2026-06-02-distribution-channels.md  2026-06-02-reference-libraries-and-patterns.md
docs/specs/: 2026-04-23-mcp-qlikview-design.md  probe-findings-2026-04-23.md
src/mcp_qlikview/: __init__.py  __main__.py  config.py  index.py  models.py  server.py  store.py
src/mcp_qlikview/parser/: __init__.py  container.py  prj.py  schema.py  script.py  sheets.py  sources.py  variables.py
src/mcp_qlikview/parser/blocks/: __init__.py  dictionary.py  layout.py  script.py  strings.py  symbols.py  tables.py  values.py
tests/: conftest.py  test_blocks_script.py  test_blocks_strings.py  test_blocks_symbols.py  test_config.py  test_container.py  test_data_sources.py  test_index.py  test_integration_stdio.py  test_layout.py  test_logical_blocks.py  test_models.py  test_prj.py  test_script.py  test_security.py  test_server.py  test_server_handlers.py  test_server_phase1.py  test_store.py  test_values.py
tests/fixtures/: synthetic_minimal.qvw
