[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-qlikview"
version = "0.1.0"
description = "MCP server that reads QlikView .qvw files and exposes their contents via DuckDB SQL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "duckdb>=0.10",
    "pyarrow>=15",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "watchdog>=4.0",
    "aiorwlock>=1.3",
    "PyQvd>=2.3",
]

[project.scripts]
mcp-qlikview = "mcp_qlikview.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_qlikview"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "reference: requires MCP_QVW_TEST_FIXTURES_DIR to be set",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
