[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mcp-qlikview"
version = "0.1.0"
description = "MCP server exposing QlikView QVW files (load script, schema, data) to Claude Code via stdio."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sergey Muliarchuk" }]
keywords = ["mcp", "qlikview", "qvw", "model-context-protocol", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "duckdb>=0.10",
    "pyarrow>=15",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "watchdog>=4.0",
    "aiorwlock>=1.3",
]

[project.optional-dependencies]
chardet = ["chardet>=5.2"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
mcp-qlikview = "mcp_qlikview.__main__:main"

[project.urls]
Homepage = "https://github.com/MuliarchukSV/MCP-QlikView"
Issues = "https://github.com/MuliarchukSV/MCP-QlikView/issues"
Repository = "https://github.com/MuliarchukSV/MCP-QlikView"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_qlikview"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "pyarrow.*", "watchdog.*", "aiorwlock.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "golden: tests requiring real reference QVW fixtures (set MCP_QVW_TEST_FIXTURES_DIR)",
    "integration: integration tests spawning the MCP server",
]
filterwarnings = [
    # Pydantic v2 warns when a field named 'schema' shadows BaseModel.schema().
    # We accept this — spec §4.3 requires the wire-field 'schema' on TableSummary
    # and SearchHit; renaming would break the contract.
    "ignore:Field name \"schema\".*:UserWarning",
]
